--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "mongodb": "^2.1.14",
     "morgan": "~1.6.1",
+    "nedb": "^1.8.0",
     "serve-favicon": "~2.3.0",
     "supervisor": "^0.9.1",
     "tingodb": "^0.4.2"
