--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^2.1.14",
     "morgan": "~1.6.1",
     "nedb": "^1.8.0",
+    "nedb-promises": "^6.2.3",
     "serve-favicon": "~2.3.0",
     "supervisor": "^0.9.1",
     "tingodb": "^0.4.2"
